# NeuronBase

./: CMakeLists.txt
include/: functions.h  neuron.h
src/: functions.cpp  neuron.cpp
